--- a/index.html
+++ b/index.html
@@ -1576,7 +1576,7 @@
       <div class="hero-content">
         <h2>Добро пожаловать в мир культурного погружения!</h2>
         <div class="oval-frame mobile-frame">
-          <img src="/img/foto.JPG" width="300" height="400" alt="Портрет Виктории Бартеневой"
+          <img src="img/foto.JPG" width="300" height="400" alt="Портрет Виктории Бартеневой"
             class="mobile-image">
         </div>
         <p>Я, Виктория Бартенева, создаю уникальные мероприятия, которые позволяют вам погрузиться в культуру, эстетику
