--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Виктория Бартенева - Погружение в язык и культуру</title>
+  <title>Виктория Rfkfibr - Погружение в язык и культуру</title>
   <meta name="description"
     content="Погрузитесь в культуру России, Англии и Японии через уникальные иммерсивные мероприятия с Viki's Globe Study. Узнайте больше о наших чаепитиях и культурных событиях!">
   <style>
