--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Виктория Rfkfibr - Погружение в язык и культуру</title>
+  <title>Виктория Бартенева - Погружение в язык и культуру</title>
   <meta name="description"
     content="Погрузитесь в культуру России, Англии и Японии через уникальные иммерсивные мероприятия с Viki's Globe Study. Узнайте больше о наших чаепитиях и культурных событиях!">
   <style>
@@ -1675,7 +1675,7 @@
         некоторыми из наших популярных мероприятий:</p>
       <div class="events-preview">
         <div class="event-card">
-          <img src="/img/rus-tea.jpg" width="250" height="150"
+          <img src="img/rus-tea.jpg" width="250" height="150"
             alt="Русское чаепитие с самоваром и традиционными угощениями">
           <h3>Русское чаепитие</h3>
           <p>Окунитесь в атмосферу русского гостеприимства и традиций.</p>
@@ -1687,7 +1687,7 @@
           </ul>
         </div>
         <div class="event-card">
-          <img src="/img/eu-tea.jpg" alt="Английское чаепитие с традиционными сконами и чаем">
+          <img src="img/eu-tea.jpg" alt="Английское чаепитие с традиционными сконами и чаем">
           <h3>Английское чаепитие</h3>
           <p>Почувствуйте себя в сердце Лондона на нашем английском чаепитии.</p>
           <ul>
@@ -1698,7 +1698,7 @@
           </ul>
         </div>
         <div class="event-card">
-          <img src="/img/jap-tea.jpg" alt="Традиционная японская чайная церемония">
+          <img src="img/jap-tea.jpg" alt="Традиционная японская чайная церемония">
           <h3>Японское чаепитие</h3>
           <p>Познакомьтесь с древними традициями японской чайной церемонии.</p>
           <ul>
