--- a/index.html
+++ b/index.html
@@ -1551,6 +1551,7 @@
     }
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/icons.png">
 </head>
 
 <body>
@@ -1570,7 +1571,7 @@
   <div class="content">
     <section id="about" class="hero">
       <div class="oval-frame oval-frame-dectop">
-        <img src="/img/foto.JPG" width="300" height="400" alt="Портрет Виктории Бартеневой"
+        <img src="img/foto.JPG" width="300" height="400" alt="Портрет Виктории Бартеневой"
           class="desktop-image">
       </div>
       <div class="hero-content">
@@ -1599,10 +1600,10 @@
       <div class="photo-slider">
         <div class="slider-container">
           <div class="slide">
-            <img src="/a/event-1.jpg" alt="Русское чаепитие с самоваром" width="800" height="500">
-            <div class="slide-caption">Русское чаепитие с самоваром</div>
+            <img src="img/1.jpg" alt="Русское чаепитие с самоваром" width="800" height="500">
+            <div class="slide-caption">Английское чаепитие в Северодвинске</div>
           </div>
-          <div class="slide">
+          <!-- <div class="slide">
             <img src="/a/event-2.jpg" alt="Английская чайная церемония" width="800" height="500">
             <div class="slide-caption">Английская чайная церемония</div>
           </div>
@@ -1657,7 +1658,7 @@
           <div class="slide">
             <img src="/a/event-15.jpg" alt="Культурный вечер" width="800" height="500">
             <div class="slide-caption">Культурный вечер</div>
-          </div>
+          </div> -->
         </div>
         <button class="slider-btn prev">&#10094;</button>
         <button class="slider-btn next">&#10095;</button>
