--- a/index.html
+++ b/index.html
@@ -1551,7 +1551,7 @@
     }
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/icons.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/icons.png">
 </head>
 
 <body>
