--- a/index.html
+++ b/index.html
@@ -1689,24 +1689,23 @@
         </div>
         <div class="event-card">
           <img src="img/eu-tea.jpg" alt="Английское чаепитие с традиционными сконами и чаем">
-          <h3>Английское чаепитие</h3>
+          <h3>Английское чаепитие (чай, сэндвичи, сконы, печенье)</h3>
           <p>Почувствуйте себя в сердце Лондона на нашем английском чаепитии.</p>
           <ul>
-            <li>Дегустация классических английских чаев</li>
-            <li>Мастер-класс по приготовлению настоящих сконов</li>
-            <li>Игра в крокет на лужайке (при хорошей погоде)</li>
-            <li>Викторина на знание английских традиций</li>
+            <li>Неотъемлемые атрибуты английского чаепития и незыблемые традиции</li>
+            <li>Исторические факты</li>
+            <li>Этикет за чайным столом</li>
+            <li>Необходимые фразы для чайной церемонии</li>
           </ul>
         </div>
         <div class="event-card">
           <img src="img/jap-tea.jpg" alt="Традиционная японская чайная церемония">
-          <h3>Японское чаепитие</h3>
+          <h3>Японское чаепитие (чай и японские сладости моти)</h3>
           <p>Познакомьтесь с древними традициями японской чайной церемонии.</p>
           <ul>
-            <li>Демонстрация традиционной чайной церемонии</li>
-            <li>Мастер-класс по каллиграфии</li>
-            <li>Дегустация японских сладостей</li>
-            <li>Знакомство с искусством икебаны</li>
+            <li>Связь японской философии и чаепития</li>
+            <li>Исторические факты</li>
+            <li>Традиционные атрибуты японского чаепития</li>
           </ul>
         </div>
       </div>
