--- a/index.html
+++ b/index.html
@@ -1620,27 +1620,27 @@
             <img src="img/1.jpg" alt="Русское чаепитие с самоваром" width="800" height="500">
             <div class="slide-caption">Английское чаепитие в Северодвинске</div>
           </div>
+          <div class="slide">
+            <img src="img/2.jpg" alt="Английская чайная церемония" width="800" height="500">
+            <div class="slide-caption"></div>
+          </div>
+          <div class="slide">
+            <img src="img/3.jpg" alt="Японская чайная церемония" width="800" height="500">
+            <div class="slide-caption"></div>
+          </div>
+          <div class="slide">
+            <img src="img/4.jpg" alt="Мастер-класс по каллиграфии" width="800" height="500">
+            <div class="slide-caption"></div>
+          </div>
+          <div class="slide">
+            <img src="img/5.jpg" alt="Чайная дегустация" width="800" height="500">
+            <div class="slide-caption"></div>
+          </div>
+          <div class="slide">
+            <img src="img/6.jpg" alt="Вечер русской культуры" width="800" height="500">
+            <div class="slide-caption"></div>
+          </div>
           <!-- <div class="slide">
-            <img src="/a/event-2.jpg" alt="Английская чайная церемония" width="800" height="500">
-            <div class="slide-caption">Английская чайная церемония</div>
-          </div>
-          <div class="slide">
-            <img src="/a/event-3.jpg" alt="Японская чайная церемония" width="800" height="500">
-            <div class="slide-caption">Японская чайная церемония</div>
-          </div>
-          <div class="slide">
-            <img src="/a/event-4.jpg" alt="Мастер-класс по каллиграфии" width="800" height="500">
-            <div class="slide-caption">Мастер-класс по каллиграфии</div>
-          </div>
-          <div class="slide">
-            <img src="/a/event-5.jpg" alt="Чайная дегустация" width="800" height="500">
-            <div class="slide-caption">Чайная дегустация</div>
-          </div>
-          <div class="slide">
-            <img src="/a/event-6.jpg" alt="Вечер русской культуры" width="800" height="500">
-            <div class="slide-caption">Вечер русской культуры</div>
-          </div>
-          <div class="slide">
             <img src="/a/event-7.jpg" alt="Английские традиции" width="800" height="500">
             <div class="slide-caption">Английские традиции</div>
           </div>
@@ -1780,15 +1780,15 @@
         <div class="contact-info">
           <h3>Свяжитесь с нами</h3>
           <div class="social-icons">
-            <a href="https://vk.com/your_vk_page" target="_blank" rel="noopener noreferrer" class="social-icon vk-icon"
+            <a href="https://vk.com/viki_pro_english" target="_blank" rel="noopener noreferrer" class="social-icon vk-icon"
               aria-label="VK Page">
               <i class="fab fa-vk"></i>
             </a>
-            <a href="https://t.me/your_telegram" target="_blank" rel="noopener noreferrer"
+            <a href="https://t.me/viki_pro_english" target="_blank" rel="noopener noreferrer"
               class="social-icon telegram-icon" aria-label="Telegram">
               <i class="fab fa-telegram-plane"></i>
             </a>
-            <a href="https://wa.me/your_whatsapp_number" target="_blank" rel="noopener noreferrer"
+            <a href="https://wa.me/89615369354" target="_blank" rel="noopener noreferrer"
               class="social-icon whatsapp-icon" aria-label="WhatsApp">
               <i class="fab fa-whatsapp"></i>
             </a>
@@ -1923,10 +1923,10 @@
     });
 
     // Auto slide every 5 seconds
-    setInterval(() => {
-      currentSlide = (currentSlide + 1) % slides.length;
-      goToSlide(currentSlide);
-    }, 5000);
+    // setInterval(() => {
+    //   currentSlide = (currentSlide + 1) % slides.length;
+    //   goToSlide(currentSlide);
+    // }, 5000);
 
     // Add touch support for mobile
     let touchStartX = 0;
