--- a/index.html
+++ b/index.html
@@ -1770,7 +1770,7 @@
         <p>Хотите быть в курсе наших предстоящих мероприятий? Присоединяйтесь к нашей группе в Telegram! Там вы сможете
           узнавать о новых событиях первыми, общаться с единомышленниками и получать эксклюзивные материалы о культуре
           разных стран.</p>
-        <button onclick="window.open('https://t.me/your_telegram_group', '_blank')" class="cta-button">Узнать о
+        <button onclick="window.open('https://t.me/+ayExY8ZF3t45ODMy', '_blank')" class="cta-button">Узнать о
           предстоящих мероприятиях в Telegram</button>
       </div>
     </section>
