--- a/index.html
+++ b/index.html
@@ -1583,8 +1583,8 @@
     .floating-contact-button {
       position: fixed;
       bottom: 80px;
-      right: 20px;
       z-index: 999;
+      left: 20px;
     }
 
     .contact-btn {
@@ -1636,6 +1636,9 @@
       .contact-btn {
         padding: 10px 20px;
         font-size: 14px;
+      }
+      .floating-contact-button{
+        opacity: 0.7px;
       }
     }
   </style>
